# infrastructure-cap

./: .asf.yaml  mcp  pipservice-cap.service
.github/scripts/: check-min-release-age.mjs
.github/workflows/: backend-ci.yml  frontend-build.yml
backend/: .gitignore  README.md  SPEC.md  config.yaml  pyproject.toml  upgradedb.py
backend/cap_backend/: __init__.py  __main__.py  app.py  audit.py  auth.py  config.py  dao.py  db.py  migrations.py  notify.py  openapi.py  pubsub.py  tally.py  tokens.py
backend/cap_backend/routes/: __init__.py  questions.py  tokens.py
backend/cap_backend/schemas/: __init__.py  common.py  errors.py  questions.py  responses.py
backend/cap_backend/sql/: schema.sql
backend/cap_backend/sql/migrations/: 0001_initial_schema.sql  0002_add_token_issue_audit_action.sql
backend/tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_config.py  test_db.py  test_migrations.py  test_pubsub.py  test_question_management.py  test_response_normalizer.py  test_responses.py  test_schemas.py  test_tokens.py
frontend/: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: gen-apache-projects.mjs
frontend/src/: App.svelte  app.d.ts  main.ts  routes.ts
frontend/src/components/: ApprovalTypeSelector.svelte  AuthGuard.svelte  BindingBadge.svelte  CountdownBadge.svelte  ErrorAlert.svelte  ExpandableComment.svelte  Footer.svelte  NavBar.svelte  PrivacyBadge.svelte  ProjectPicker.svelte  QuestionCard.svelte  QuestionForm.svelte  QuestionList.svelte  ResponseForm.svelte  (+5 more)
(+20 files in other folders)
